kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-app
  namespace: default
spec:
  selector:
    app: sample-service-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
